# Diachronic-embeddings

./: .gitignore  404.html  README.md  config.toml  config.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
concepts/: references.bib
concepts/intro/: index.html
concepts/literature_review/: index.html
concepts/problem_statement/: index.html
concepts/research_methodology/: index.html
doc/data/load/: index.html
doc/data/preprocess/: index.html
doc/feature_extraction/bert/: index.html
doc/feature_extraction/roberta/: index.html
doc/feature_extraction/word2vec/: index.html
doc/graph/edges/: index.html
doc/graph/nodes/: index.html
doc/graph/temporal_graph/: index.html
docs/: data.md  data_loader.md  feature_extraction.md  index.md  requirements.md  utils.md
docs/concepts/: intro.md  literature_review.md  problem_statement.md  research_methodology.md
docs/doc/data/: graph.md  load.md  preprocess.md
docs/doc/feature_extraction/: bert.md  roberta.md  word2vec.md
docs/doc/graph/: edges.md  graph.md  nodes.md  temporal_graph.md
notebooks/: exploring.ipynb
search/: search_index.json
semantics/data/: data_loader.py  data_preprocessing.py  image_preprocessing.py
semantics/feature_extraction/: bert.py  roberta.py  word2vec.py
semantics/graphs/: edges.py  nodes.py  temporal_graph.py
semantics/inference/: graph_clustering.py  obsedian.py  semantic_shift.py  visualize.py
semantics/model/: a3tgcn.py
semantics/models/: link_prediction.py  test.py  tgcn.py
semantics/utils/: components.py  utils.py
src/: config.yaml  main.yaml  preprocess.py
src/data/: data_loader.py  data_preprocessing.py  preprocess.py  temporal_graphs.py
src/embeddings/: roberta.py
src/feature_extraction/: bert.py  roberta.py  word2vec.py
src/graphs/: temporal_graph.py
src/methods/: model.py
src/methods/embeddings/word2vec/: word2vec.py
src/utils/: settings.py  utils.py
tests/: splitxml.py
tests/data/: test_split_xml.py
tests/graphs/: test_temporal_graph.py
utils/: index.html
