[tool.poetry]
name = "semantics"
version = "0.1.0"
description = "semantic shift detection using diachronic embeddings"
authors = ["Imene KOLLI <53266529+imene-swaan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.34.1"
torch = "2.1.0"
accelerate = "^0.24.0"
gensim = "^4.3.2"
nltk = "^3.8.1"
tomli = "^2.0.1"
mkdocs-material = {version = "^9.4.7", extras = ["imaging"]}
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-bibtex = "^2.11.0"
torch-geometric = "2.4.0"
torch-geometric-temporal = "0.54.0"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
pydantic = "^2.5.1"
opencv-python = "^4.8.1.78"
pytesseract = "^0.3.10"
easyocr = "^1.7.1"
word2number = "^1.1"
python-louvain = "^0.16"
spacy = "^3.7.4"
ruptures = "^1.1.9"
plotly = "^5.19.0"
imageio = "^2.34.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.24.3"



[tool.poe.tasks]
torch-scatter = "python -m pip install torch-scatter -f https://data.pyg.org/whl/torch-2.1.0+cpu.html"
torch-sparse = "python -m pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-2.1.0+cpu.html"
en_core_web_sm = "python -m spacy download en_core_web_sm"
kaleido = "python -m pip install -U kaleido"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
